assets/stylesheet.css
:root {
    --main-text: #3d7c54;
    --highlight: #dee99d;
}

*{
    box-sizing: border-box;
    margin: 20px;
    padding: 5px;
  }

body  {
    color: var(--main-text);
    font-family: "Lucida Console", Courier, monospace;
  }

header {
    padding: 20px 10px;
    background-color: #dee99d;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

header a {
    text-decoration: none;
    color: var(--main-text);
  }
  
  header nav {
    margin: 5px 0;
  }
  
  header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
  }
  
  header nav ul li a {
    margin: 0 20px;
    font-weight: lighter;
    font-size: 1.55vw;
  }

footer {

}

.hero {
    background-image: url('../assets/images/hero.jpg');
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    width: auto;
    height: 80px;
  }

  .projects {
    width: 100%;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
  }

  .project {
    margin: 5px;
    display: flex;
    flex: 1;
    justify-content: space-around;
    flex-wrap: wrap;

  }

  .project img {
    border-radius: 20px;
    background-color: #dee99d;
    padding: 10px;
    width: 250px;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    flex: 1;
  }
  
  section {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-evenly;
  }

  .contact-me {
      display: inline-block;
      flex-wrap: nowrap;
      flex: 1;
      text-align: center;
      padding: 20px;
      margin: 5px;
  }

